# toolrecognize_backend

./: README.md  docker-compose.yml  example.env  local.env  todo.md
api/: Dockerfile  main.py  pyproject.toml
api/src/api/: __init__.py
api/src/api/analyze/: __init__.py  service.py
api/src/api/employee/: __init__.py  api.py  repository.py  schemes.py  service.py
api/src/api/kit/: api.py  repository.py  schemes.py  service.py
api/src/api/location/: api.py  repository.py  schemes.py  service.py
api/src/api/recognize/: __init__.py  api.py  repository.py  schemes.py  service.py
api/src/api/session/: __init__.py  api.py  repository.py  schemes.py  service.py
api/src/api/session_tool/: repository.py
api/src/api/tool/: api.py  repository.py  schemes.py  service.py
api/src/core/: __init__.py  broker.py  repository.py  repository_s3.py  schemes.py  settings.py
api/src/database/: __init__.py  database.py  seed.py
api/src/storage/: __init__.py  repository_s3.py
api/tests/: test_session_api.py
configs/: rabbitmq.conf
migration/: Dockerfile  pyproject.toml
migration/migrations/: env.py
migration/migrations/versions/: 789691eb40ea_init.py  882ca76691b0_sessionstatus.py
recognize/: Dockerfile  README.md  main.py  pyproject.toml  test_client.py
recognize/src/: model.py  schemas.py  web_app.py  worker.py
shared/: pyproject.toml
