[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
    "asyncpg>=0.30.0",
    "debugpy>=1.8.17",
    "fastapi>=0.117.1",
    "faststream[rabbit]>=0.5.48",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-dotenv[local]>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
