[project]
name = "recognize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery>=5.5.3",
  "fastapi>=0.117.1",
  "ultralytics>=8.3.203",
  "uvicorn>=0.37.0",
  "pillow>=10.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
